style.css
/* Global */

:root {
	font-family: Arial, Helvetica, sans-serif;
}

body,
#site,
#header,
#content,
#header-left,
#header-right,
#header-button,
#modal,
#edit-modal,
#edit-task-modal,
#title,
.task-div,
.project-task-div,
.project-task-type-div,
.task-type-div,
.task-type,
.project-task-type,
.checkbox-div,
.task-checkbox-div,
label,
.label,
.task-title,
.project-task-title,
.task-due,
.project-task-due,
.expand-task,
.task-notes,
.project-task-notes,
.edit-button,
.task-edit-button,
.delete-button,
.task-delete-button,
.add-tasks-div,
.expand-div,
.expand-button,
#add-new-buttons,
#add-new-form,
#create-edit-button,
#edit-task-button,
#edit-buttons {
	display: grid;
}

#header,
#content {
	width: 100%;
	height: 100%;
}

body {
	justify-content: center;
	min-height: 600px;
}

#content {
	padding-bottom: 15px;
}

#site,
#overlay {
	width: 300px;
	height: 100%;
	grid-template-rows: 50px 1fr;
}

/* Header */

#header {
	grid-row-start: 1;
	font-size: 25px;
	grid-template-columns: 1fr 1fr;
	align-items: center;
	font-weight: bold;
}

#header-left {
	grid-column-start: 1;
	margin-left: 15px;
}

#header-right {
	grid-column-start: 2;
	margin-right: 15px;
}

#header-button {
	justify-content: right;
	border: none;
	font-size: 40px;
}

/* Body */

#content {
	grid-row-start: 2;
	align-content: start;
}

/* Task */

.task-div {
	margin-top: 15px;
	margin-left: 15px;
	margin-right: 15px;
	border-radius: 10px;
	padding: 15px;
	padding-right: 5px;
	padding-bottom: 5px;
	grid-template-rows: 20px 35px 20px 0fr 20px;
	grid-template-columns: 1fr 1fr;
	align-items: center;
}

.project-task-div {
	margin-top: 10px;
	margin-left: 5px;
	margin-right: 5px;
	border-radius: 10px;
	padding: 5px;
	padding-right: 0px;
	padding-bottom: 0px;
	grid-template-rows: 20px 35px 20px 0fr 0fr;
	grid-template-columns: 1fr 1fr;
	align-items: center;
}

.task-type-div {
	grid-area: 1 / 1 / 2 / 3;
	grid-template-columns: 1fr 1fr;
	align-items: center;
}

.project-task-type-div {
	grid-area: 1 / 1 / 2 / 3;
	grid-template-columns: 1fr 1fr;
	align-items: center;
}

.task-type {
	grid-column-start: 1;
	font-size: 14px;
	font-weight: bold;
}

.project-task-type {
	grid-column-start: 1;
	justify-content: left;
	align-items: center;
	font-size: 14px;
	font-weight: bold;
}

.checkbox-div {
	grid-column-start: 2;
	font-size: 10px;
	grid-template-columns: 1fr 30px;
	align-items: center;
	justify-items: right;
	padding-right: 7px;
}

.task-checkbox-div {
	grid-column-start: 2;
	font-size: 10px;
	grid-template-columns: 1fr 30px;
	align-items: center;
	justify-items: right;
	padding-right: 2px;
}

.label {
	grid-column-start: 1;
	justify-items: right;
}

.checkbox {
	width: 15px;
}

.task-checkbox {
	width: 15px;
}

.task-title {
	justify-content: left;
	align-content: center;
	grid-area: 2 / 1 / 3 / 3;
}

.project-task-title {
	grid-area: 2 / 1 / 3 / 3;
	justify-content: left;
	align-content: center;
}

.task-due,
.project-task-due {
	justify-content: left;
	align-content: center;
	font-size: 12px;
}

.task-due {
	grid-area: 3 / 1 / 4 / 3;
}

.project-task-due {
	grid-area: 3 / 1 / 4 / 3;
}

.expand-task {
	display: none;
	grid-area: 4 / 1 / 5 / 3;
	align-items: center;
	grid-template-columns: 1fr 1fr;
	grid-template-rows: 0fr 0fr 0fr;
	margin-top: 5px;
	padding-top: 5px;
}

.task-notes {
	font-size: 12px;
	justify-content: left;
	grid-area: 1 / 1 / 2 / 3;
	word-wrap: break-word;
	overflow-wrap: break-word;
	word-break: break-all;
}

.project-task-notes {
	font-size: 12px;
	justify-content: left;
	grid-area: 4 / 1 / 5 / 3;
	word-wrap: break-word;
	overflow-wrap: break-word;
	word-break: break-all;
	margin-top: 7px;
}

.edit-button,
.delete-button,
.task-edit-button,
.task-delete-button {
	padding: 5px;
	border: none;
	border-radius: 10px;
	margin: 10px;
	margin-top: 15px;
	margin-bottom: 0px;
}

.edit-button {
	grid-area: 2 / 1 / 3 / 2;
}

.task-edit-button {
	grid-area: 5 /1 / 6 / 2;
	margin-left: 0px;
}

.delete-button {
	grid-area: 2 / 2 / 3 / 3;
}

.task-delete-button {
	grid-area: 5 / 2 / 6 / 3;
	margin-right: 5px;
}

.add-tasks-div {
	grid-area: 3 / 1 / 4 / 3;
}

.expand-div {
	grid-area: 5 / 1 / 6 / 3;
}

.expand-button {
	border: none;
	font-size: 14px;
	display: grid;
}

.on {
	display: grid;
}

/* Modal */

#modal,
#edit-modal,
#edit-task-modal,
#overlay {
	display: none;
}

#overlay {
	position: fixed;
	top: 8px;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.5);
}

#modal,
#edit-task-modal,
#edit-modal {
	position: fixed;
	transform: translate(35px, 35px);
	z-index: 10;
	padding: 15px;
	border-radius: 10px;
	width: 200px;
}

legend {
	text-align: center;
}

#add-new-form {
	border: none;
}

select,
.form {
	margin-top: 15px;
}

input,
select,
#submit-button,
#edit-button,
#create-edit-button,
#edit-task-button,
#cancel-button,
#cancel-edit-button,
#cancel-task-button {
	border: none;
	padding: 15px;
	border-radius: 10px;
}

#select-project {
	display: none;
}

input {
	width: 170px;
}

#add-new-buttons {
	grid-template-columns: 1fr 1fr;
	justify-items: stretch;
	gap: 15px;
}

#add-new-form {
	margin-bottom: 15px;
}

#due-label {
	margin-bottom: 15px;
}

#edit-buttons {
	grid-template-columns: 1fr 1fr;
	gap: 15px;
}

#create-edit-button,
#edit-task-button {
	grid-column-start: 1;
}

#cancel-edit-button,
#cancel-task-button {
	grid-column-start: 2;
}

/* Color */

#header,
#header-button {
	background-color: #0369a1;
	color: white;
}

.edit-button,
#create-edit-button,
#edit-task-button {
	background-color: #0369a1;
	color: white;
}

.task-edit-button,
.task-delete-button {
	background-color: #3f3f46;
	color: white;
}

#content {
	background-color: black;
}

#modal,
#edit-modal,
#edit-task-modal {
	background-color: black;
	color: white;
}

#cancel-button,
#cancel-edit-button,
#cancel-task-button,
.delete-button {
	background-color: #be123c;
	color: white;
}

#submit-button,
#edit-button,
#create-edit-button,
#edit-task-button {
	background-color: #15803d;
	color: white;
}

.task-div,
.expand-button {
	background-color: white;
}

